--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,15 @@
 }
 
 body {
-    font-family: Manrope,sans-serif;
+    font-family: Manrope, sans-serif;
     font-weight: 300;
     color: #4dc1c0;
 }
 
 /* headings and logo */
 
-h1, h2 {
+h1,
+h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -27,4 +28,36 @@ h1, h2 {
 
 #logo img {
     height: 150px;
+}
+
+/* navigation links */
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 3px;   
+    float: right;
+    padding-right: 150px;
+}
+
+#menu, #logo  {
+    line-height: 150px;
+}
+
+#menu li {
+    float: left;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: #5f539d;   
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #4dc1c0;
+}
+
+.active {
+    border-bottom: 1px solid #3f3f3f;
 }
