--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ h2 {
     letter-spacing: 3px;   
     float: right;
     padding-right: 150px;
+    
 }
 
 #menu, #logo  {
@@ -61,3 +62,31 @@ h2 {
 .active {
     border-bottom: 1px solid #3f3f3f;
 }
+
+#bg-header {
+    height: 150px;
+    width: 100%;
+    background-color: #4dc1c0;
+}
+
+/* image left and about-us section */
+
+#image-left {
+    height: 400px;
+    width: 600px;
+    background: #4dc1c0 url(../images/image-left.jpg) no-repeat;
+    float: left;
+    margin-right: 10px;
+}
+
+/* .about-us p {
+    color: #4dc1c0;
+    margin: 100px 300px 0 0;
+    height: auto;
+    width: 600px;
+    float: right ;
+}
+
+#image-left, #about-us {
+    line-height: auto;
+} */
