--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ header {
     width: 100%;
     background-color: #4dc1c0;
     padding-bottom: 5px;
+    position: scroll;
 }
 
 /* headings and logo */
@@ -76,7 +77,6 @@ h2 {
 
 .main-bg {
     background-color: #5d3c96;
-    position: absolute;
     height: 700px;
 }
 
@@ -103,6 +103,88 @@ h2 {
 }
 
 #right-about h3 {
-    font-size: 200%;
+    font-size: 110%;
     margin-bottom: 30px;
+    text-align: center;
+}
+
+/* services */
+
+#services {
+    background-color: #4dc1c0;
+    width: 100%;
+    height: 600px;
+}
+
+#services-left {
+    padding: 175px 10%;
+    color: #fafafa;
+    float: left;
+    width: 15%;
+
+}
+
+#services-right {
+    padding: 175px 10%;
+    color: #fafafa;
+    float: right;
+    width: 15%;
+}
+
+#services-left div {
+    height: 50px;
+    border-style: outset;
+    border-radius: 0 20% 0 20%;
+    box-sizing: border-box;
+    border-color: #5d3c96;
+    background-color: rgba(93, 60, 150, 0.4);
+    text-align: center;
+}
+
+#services-right div {
+    height: 50px;
+    border-style: outset;
+    border-radius: 20% 0 20% 0;
+    box-sizing: border-box;
+    border-color: #5d3c96;
+    background-color: rgba(93, 60, 150, 0.4);
+    text-align: center;
+}
+
+#services-left-link {
+    margin-top: 50px;
+    padding-top: 10px;
+}
+
+#services-right-link {
+    margin-top: 50px;
+    padding-top: 10px;
+}
+
+#services a {
+    color: #fafafa;
+    text-decoration: none;
+
+}
+
+
+/* Services Image  */
+
+#image-right {
+    width: 600px;
+    margin: 0 auto;
+    padding-top: 100px;
+}
+
+#image-right-container {
+    height: 400px;
+    width: 600px;
+    border-radius: 20% 25% 0 25%;
+    background: #4dc1c0 url(../images/image-center.jpg) no-repeat;
+
+
+}
+
+#image-right-container-bg {
+    background-color: #4dc1c0;
 }
