--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
         justify-content: space-between;
         align-items: center;
 
-        flex-basis: 100%;
+        
     }
 
     /* headings and logo */
@@ -40,12 +40,12 @@
     .menu {
         list-style: none;
         flex-basis: 50%;
+        margin-left: 50px;
     }
 
     .menu li {
         display: inline-block;
         padding: 0 50px;
-
     }
 
     .active {
@@ -116,13 +116,13 @@
     
     #services-left-1, #our-team-1 {
         margin: 0 15px;
-        flex-basis: 25%;
+        flex: 1;
         order: 1;
     }
     
     #services-left-2, .our-team-2 {
         margin: 0 15px;
-        flex-basis: 25%;
+        flex: 1;
         order: 3;
     }
     
@@ -142,14 +142,14 @@
     
     #services-right-1, .our-team-3 {
         margin: 0 15px;
-        flex-basis: 25%;
+        flex: 1;
         order: 1;
     }
     
     
     
     #services-right-2, .our-team-4 {
-        flex-basis: 25%;
+        flex: 1;
         order: 3;
         margin: 0 15px;
     }
