--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,13 +111,13 @@
         text-align: justify;
     }
     
-    #services-left-1, #our-team-1 {
+    #services-left-1 {
         margin: 0 15px;
         flex: 1;
         order: 1;
     }
     
-    #services-left-2, .our-team-2 {
+    #services-left-2 {
         margin: 0 15px;
         flex: 1;
         order: 3;
@@ -136,13 +136,13 @@
     }
     
     
-    #services-right-1, .our-team-3 {
+    #services-right-1 {
         margin: 0 15px;
         flex: 1;
         order: 1;
     }
     
-    #services-right-2, .our-team-4 {
+    #services-right-2 {
         flex: 1;
         order: 3;
         margin: 0 15px;
@@ -234,7 +234,30 @@ footer a {
 .our-team {
     display: flex;
     text-align: justify;
+    justify-content: space-between;
 }
+
+.our-team-1 {
+    margin: 0 15px;
+    flex-basis: 25%;
+}
+
+.our-team-2 {
+    margin: 0 0 0 15px;
+    flex-basis: 25%;
+}
+
+.our-team-3 {
+    margin: 0 0 0 15px;
+    flex-basis: 25%;
+}
+
+.our-team-4 {
+    margin: 0 15px;
+    flex-basis: 25%;
+}
+
+
 
 @media screen and (max-width: 800px) {
 
