--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,9 +195,13 @@
     flex-basis: 25%;
 }
 
+.form-container-mid {
+    display: flex;
+    justify-content: center;
+}
+
 .form-container {
-    border: 2px solid #96723c;
-    margin: 10px;
+    
 }
 
 form {
@@ -206,17 +210,23 @@ form {
     margin: auto;
     border: 2px solid #96723c;
     margin: 10px;
-    width: 80vw;
-    align-items: flex-start;
+    width: 50vw;
+    height: 75vh;
+    align-items: center;
 }
 
 .text-input {
     flex: 1;
     border: 1px solid #5d3c96;
+    line-height: 1.8;
+}
+
+.subject {
+
 }
 
 .comments {
-    width: 450px;
+    width: 40vw;
     height: 150px;
 }
 
