--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,26 +195,59 @@
     flex-basis: 25%;
 }
 
+.form-container-outer {
+    display: flex;
+    justify-content: center;
+    border: 2px solid #e71414;
+    
+}
+
 .form-container-mid {
     display: flex;
     justify-content: center;
+    border: 2px solid #1bac16;
+    width: 60%;
+    background-color: #b8b5bd;
+    
 }
 
-form {
+.form-container {
+    width: 80%;
     display: flex;
-    flex-direction: column; 
-    margin: auto;
+    flex-direction: column;     
+    color: #fafafa;
     border: 2px solid #96723c;
-    margin: 10px;
-    width: 50vw;
-    height: 75vh;
+    background-color: #55be93;
     align-items: center;
 }
 
-.text-input {
+.signup-form {
+    width: 80%;
+    padding: 20px 0;
+}
+
+.required-field {
+    color: red;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-control input {
     flex: 1;
+}
+
+.text-input {
+    
     border: 1px solid #5d3c96;
-    line-height: 1.8;
+    line-height: 2;
+    
+}
+
+.signup-form div {
+    margin-bottom: 20px;
 }
 
 
@@ -284,16 +317,7 @@ footer a {
 
 @media screen and (max-width: 800px) {
 
-    header {
-        flex-direction: column;
-
-    }
-
-    .our-team {
-        flex-direction: column;
-    }
-
-    .main-bg {
+    header, .our-team, .main-bg {
         flex-direction: column;
     }
 
@@ -328,4 +352,10 @@ footer a {
     #address {
         margin: 10px 25px;
     }
+
+    .form-container-mid {
+        
+        width: 100%;
+    }
 }
+
