--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,11 +49,11 @@
 
     .menu a {
         color: #fafafa;
-        
+        text-decoration: none;
     }
 
     .active {
-        border-bottom: 1px solid #3f3f3f;
+        border-bottom: 2px solid #5d3c96;
     }
 
 
