--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,6 @@
         color: #4dc1c0;
     }
 
-    header {
-        background-color: #4dc1c0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
     /* headings and logo */
 
     h1,
@@ -29,22 +22,30 @@
         color: #fafafa;
     }
 
+    header {
+        background-color: #4dc1c0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+    }
+
     .logo {
         width: 150px;
         height: 150px;
-        margin-right: auto;
-        
+
+
     }
-    
+
     .menu {
-        flex-basis: 50%;
-        margin-left: auto;
         list-style: none;
+
     }
 
     .menu li {
         display: inline-block;
         padding: 0 50px;
+
     }
 
     .menu a {
@@ -60,28 +61,27 @@
     /* image left and about-us section */
 
     .main-bg {
-        /* background-color: #5d3c96; */
         text-align: center;
         display: flex;
         margin: 50px auto;
-        
+
     }
-    
+
     .image-left {
         flex: 1;
         border-radius: 0 30%;
         margin: 10px 20px;
     }
-    
+
     .image-left img {
         width: 100%;
         height: auto;
         border-radius: 0 30%;
         margin: auto;
     }
-    
+
     .right-about {
-    
+
         color: #4dc1c0;
         flex: 2;
         margin: auto 30px;
@@ -89,12 +89,12 @@
         text-align: center;
         box-sizing: border-box;
     }
-    
+
     .right-about p {
         text-align: justify;
         margin-top: 10px;
     }
-    
+
     hr {
         border-top: 1px solid #5d3c96;
         width: 100%;
@@ -110,38 +110,38 @@
         margin: 50px 0;
         text-align: justify;
     }
-    
+
     #services-left-1 {
         margin: 0 15px;
         flex: 1;
         order: 1;
     }
-    
+
     #services-left-2 {
         margin: 0 15px;
         flex: 1;
         order: 3;
     }
-    
+
     .services-image {
         order: 2;
         margin: 10px 20px;
     }
-    
-    
+
+
     .services-image img {
         width: 100%;
         height: auto;
         border-radius: 0 30%;
     }
-    
-    
+
+
     #services-right-1 {
         margin: 0 15px;
         flex: 1;
         order: 1;
     }
-    
+
     #services-right-2 {
         flex: 1;
         order: 3;
@@ -150,149 +150,149 @@
 
     /* Our team section*/
 
-.our-team-container {
-    color: #4dc1c0;
-    display: flex;
-    margin: 50px 0;
-    flex-direction: column;
-}
+    .our-team-container {
+        color: #4dc1c0;
+        display: flex;
+        margin: 50px 0;
+        flex-direction: column;
+    }
 
-.our-team-container h2 {
-    margin: auto;
-    color: #5d3c96;
-    font-size: 200%;
-    text-align: center;
-}
+    .our-team-container h2 {
+        margin: auto;
+        color: #5d3c96;
+        font-size: 200%;
+        text-align: center;
+    }
 
-.our-team-container h3 {
-    color: #5d3c96;
-    text-align: center;
-}
+    .our-team-container h3 {
+        color: #5d3c96;
+        text-align: center;
+    }
 
-.our-team {
-    display: flex;
-    text-align: justify;
-    justify-content: space-between;
-}
+    .our-team {
+        display: flex;
+        text-align: justify;
+        justify-content: space-between;
+    }
 
-.our-team-1 {
-    margin: 0 15px;
-    flex-basis: 25%;
-}
+    .our-team-1 {
+        margin: 0 15px;
+        flex-basis: 25%;
+    }
 
-.our-team-2 {
-    margin: 0 0 0 15px;
-    flex-basis: 25%;
-}
+    .our-team-2 {
+        margin: 0 0 0 15px;
+        flex-basis: 25%;
+    }
 
-.our-team-3 {
-    margin: 0 0 0 15px;
-    flex-basis: 25%;
-}
+    .our-team-3 {
+        margin: 0 0 0 15px;
+        flex-basis: 25%;
+    }
 
-.our-team-4 {
-    margin: 0 15px;
-    flex-basis: 25%;
-}
+    .our-team-4 {
+        margin: 0 15px;
+        flex-basis: 25%;
+    }
 
-.form-container-outer {
-    display: flex;
-    justify-content: center;    
-}
+    .form-container-outer {
+        display: flex;
+        justify-content: center;
+    }
 
-.form-container-mid {
-    display: flex;
-    justify-content: center;
-    width: 80%;
-}
+    .form-container-mid {
+        display: flex;
+        justify-content: center;
+        width: 80%;
+    }
 
-.form-container {
-    width: 50%;
-    display: flex;
-    flex-direction: column;     
-    color: #fafafa;
-    margin: 10px 0;
-    background-color: #b8b5bd;
-    align-items: center;
-}
+    .form-container {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        color: #fafafa;
+        margin: 10px 0;
+        background-color: #b8b5bd;
+        align-items: center;
+    }
 
-.signup-form {
-    width: 80%;
-    padding: 20px 0;
-}
+    .signup-form {
+        width: 80%;
+        padding: 20px 0;
+    }
 
-.required-field {
-    color: red;
-}
+    .required-field {
+        color: red;
+    }
 
-.form-control {
-    display: flex;
-    flex-direction: column;
-}
+    .form-control {
+        display: flex;
+        flex-direction: column;
+    }
 
-.form-control input {
-    flex: 1;
-}
+    .form-control input {
+        flex: 1;
+    }
 
-.text-input {
-    
-    border: 1px solid #5d3c96;
-    line-height: 2;
-    
-}
+    .text-input {
 
-.signup-form div {
-    margin-bottom: 20px;
-}
+        border: 1px solid #5d3c96;
+        line-height: 2;
+
+    }
+
+    .signup-form div {
+        margin-bottom: 20px;
+    }
 
 
     /* footer*/
 
     footer {
-    height: 300px;
-    background-color: #3f3f3f;
-    color: #fafafa;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
+        height: 300px;
+        background-color: #3f3f3f;
+        color: #fafafa;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
 
-footer a {
-    color: #fafafa;
-}
+    footer a {
+        color: #fafafa;
+    }
 
-.social {
-    font-size: 150%;
-    flex: 3;
-    margin: auto;
-    order: 1;
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
+    .social {
+        font-size: 150%;
+        flex: 3;
+        margin: auto;
+        order: 1;
+        display: flex;
+        justify-content: space-between;
+        box-sizing: border-box;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
 
-.social li {
-    display: inline-block;
-    padding-left: 30px;
-    margin: auto 50px;
-}
+    .social li {
+        display: inline-block;
+        padding-left: 30px;
+        margin: auto 50px;
+    }
 
-.map-footer {
-    flex: 1;
-    margin: auto;
-    box-sizing: border-box;
-    order: 3;
-    padding-right: 50px;
-}
+    .map-footer {
+        flex: 1;
+        margin: auto;
+        box-sizing: border-box;
+        order: 3;
+        padding-right: 50px;
+    }
 
-/* iframe {
+    /* iframe {
     padding: 0 30px;
       
 } */
 
-#address {
+    #address {
     flex: 1;
     text-align: left;
     letter-spacing: 2px;
@@ -312,8 +312,16 @@ footer a {
 
 @media screen and (max-width: 800px) {
 
-    header, .our-team, .main-bg {
+     .our-team, .main-bg {
         flex-direction: column;
+    }
+
+    .main-bg {
+        font-size: 80%;
+    }
+
+    .our-team-2, .our-team-3 {
+        margin-right: 15px;
     }
 
     .image-left {
@@ -325,10 +333,8 @@ footer a {
         aspect-ratio: auto 16/9;
     }
 
-    footer {
-        flex-direction: column;
-        height: auto;
-        margin-bottom: 10px;
+    .menu li {
+        display: inline-block;    
     }
 
     .services-container {
@@ -356,5 +362,10 @@ footer a {
     .form-container-mid {
         width: 100%;
     }
-}
 
+    footer {
+        flex-direction: column;
+        height: auto;
+        margin-bottom: 10px;
+    }
+}
