--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,14 +111,16 @@
         text-align: justify;
     }
 
-    #services-left-1 {
+
+
+    .services-left-1 {
         margin: 0 15px;
         flex: 1;
         order: 1;
     }
 
-    #services-left-2 {
-        margin: 0 15px;
+    .services-left-2 {
+        margin: auto 15px 0 0;
         flex: 1;
         order: 3;
     }
@@ -132,7 +134,7 @@
     .services-image img {
         width: 100%;
         height: auto;
-        border-radius: 0 30%;
+        border-radius: 0 50%;
     }
 
 
@@ -145,7 +147,7 @@
     #services-right-2 {
         flex: 1;
         order: 3;
-        margin: 0 15px;
+        margin: auto 15px 0 0;
     }
 
     /* Our team section*/
