--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,11 +107,23 @@
     .services-container {
         color: #4dc1c0;
         display: flex;
+        margin: 50px 15px;
+        flex-direction: column;
+    }
+
+    .services {
+        display: flex;
         margin: 50px 0;
         text-align: justify;
     }
 
-    .services-container p {
+    .services-container h2 {
+        color: #5d3c96;
+        text-align: center;
+        font-size: xx-large;
+    }
+
+    .services p {
         margin-top: 15px;
     }
 
@@ -162,9 +174,8 @@
     }
 
     .our-team-container h2 {
-        margin: auto;
         color: #5d3c96;
-        font-size: 200%;
+        font-size: xx-large;
         text-align: center;
     }
 
