--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,12 +265,18 @@
     /* footer*/
 
     footer {
-        height: 300px;
         background-color: #3f3f3f;
         color: #fafafa;
         display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .footer-container {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin: 20px auto;
+
     }
 
     footer a {
@@ -279,101 +285,104 @@
 
     .social {
         font-size: 150%;
-        flex: 3;
-        margin: auto;
+        align-items: center;
+        margin-right: auto;
         order: 1;
         display: flex;
         justify-content: space-between;
         box-sizing: border-box;
-        flex-direction: column;
+        margin-left: 25px;
         flex-wrap: wrap;
     }
 
     .social li {
         display: inline-block;
-        padding-left: 30px;
-        margin: auto 50px;
+        padding-left: 25px;
     }
 
     .map-footer {
-        flex: 1;
-        margin: auto;
+        align-items: center;
         box-sizing: border-box;
         order: 3;
         padding-right: 50px;
     }
 
-    /* iframe {
-    padding: 0 30px;
-      
-} */
-
     #address {
-    flex: 1;
-    text-align: left;
-    letter-spacing: 2px;
-    order: 2;
-    margin: auto;
-}
-
-#address h3 {
-    padding-top: 15px;
-}
-
-#address p {
-    margin-top: 15px;
-}
-
-
-
-@media screen and (max-width: 800px) {
-
-     .our-team, .main-bg, .services {
-        flex-direction: column;
+        margin-right: 10px;
+        text-align: left;
+        letter-spacing: 2px;
+        order: 2;
+        
     }
 
-    .main-bg {
-        font-size: 80%;
+    #address h3 {
+        padding-top: 15px;
     }
 
-    .image-left {
-        padding: 0 5px;
+    #address p {
+        margin-top: 15px;
     }
 
-    #image-left-container {
-        width: 100%;
-        aspect-ratio: auto 16/9;
+    .copyright {
+        margin: auto;
     }
 
-    .menu li {
-        display: inline-block;    
-    }
+    @media screen and (max-width: 800px) {
 
-    footer .social li {
-        margin: 10px 7px 0 7px;
-    }
+        .our-team,
+        .main-bg,
+        .services,
+        .footer-container {
+            flex-direction: column;
+        }
 
-    iframe {
-        width: 100%;
-        margin-left: 25px;
-    }
+        .main-bg {
+            font-size: 80%;
+        }
 
-    #address {
-        margin: 10px 25px;
-    }
+        .image-left {
+            padding: 0 5px;
+        }
 
-    .form-container {
-        width: 100%;
-        margin: 0;
-    }
+        #image-left-container {
+            width: 100%;
+            aspect-ratio: auto 16/9;
+        }
 
-    .form-container-mid {
-        width: 100%;
-    }
+        .menu li {
+            display: inline-block;
+        }
 
-    footer {
-        flex-direction: column;
-        height: auto;
-        margin-bottom: 10px;
+        .map-footer {
+            order: 2;
+        }
+
+        iframe {
+            width: 100%;
+            margin-left: 25px;
+            
+        }
+
+        #address {
+            margin: 0 25px 10px;
+            order: 1;
+        }
+
+        .form-container {
+            width: 100%;
+            margin: 0;
+        }
+
+        .form-container-mid {
+            width: 100%;
+        }
+
+        .social {
+            order: 3;
+            margin: 10px 0 0 0;
+        }
+
+        .social li {
+            margin-right: 15px;
+        }
     }
-}
