--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@
 
     body {
         font-family: Manrope, sans-serif;
-        font-weight: 300;
-        color: #4dc1c0;
+        font-weight: 400;
+        color: #5d3c96;
     }
 
     /* headings and logo */
@@ -22,8 +22,12 @@
         color: #fafafa;
     }
 
+    h3 {
+        color: #5d3c96;
+    }
+
     header {
-        background-color: #4dc1c0;
+        background-color: #4fc4cf;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -81,8 +85,6 @@
     }
 
     .right-about {
-
-        color: #4dc1c0;
         flex: 2;
         margin: auto 30px;
         font-size: 150%;
@@ -105,7 +107,6 @@
     /* services */
 
     .services-container {
-        color: #4dc1c0;
         display: flex;
         margin: 50px 15px;
         flex-direction: column;
@@ -167,7 +168,7 @@
     /* Our team section*/
 
     .our-team-container {
-        color: #4dc1c0;
+        
         display: flex;
         margin: 50px 15px;
         flex-direction: column;
@@ -226,9 +227,9 @@
         width: 50%;
         display: flex;
         flex-direction: column;
-        color: #fafafa;
+        color: #3f3f3f;
         margin: 10px 0;
-        background-color: #b8b5bd;
+        background-color: #c9c9c9;
         align-items: center;
     }
 
@@ -237,8 +238,12 @@
         padding: 20px 0;
     }
 
+    .required-field-b {
+        font-size: small;
+    } 
+
     .required-field {
-        color: red;
+        color: #f74242;
     }
 
     .form-control {
@@ -276,7 +281,6 @@
         justify-content: space-between;
         width: 100%;
         margin: 20px auto;
-
     }
 
     footer a {
@@ -317,6 +321,7 @@
 
     #address h3 {
         padding-top: 15px;
+        color: #fafafa;
     }
 
     #address p {
@@ -325,6 +330,10 @@
 
     .copyright {
         margin: auto;
+    }
+
+    .copyright h3 {
+        color: #fafafa;
     }
 
     @media screen and (max-width: 800px) {
